RESOLVED FIXED89491
ThreadingWin: Silence GCC compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=89491
Summary ThreadingWin: Silence GCC compiler warnings
Kalev Lember
Reported 2012-06-19 11:41:02 PDT
ThreadingWin.cpp: In member function 'bool WTF::PlatformCondition::timedWait(WTF::PlatformMutex&, DWORD)': ThreadingWin.cpp:346:11: warning: variable 'res' set but not used [-Wunused-but-set-variable] ThreadingWin.cpp: In member function 'void WTF::PlatformCondition::signal(bool)': ThreadingWin.cpp:395:11: warning: variable 'res' set but not used [-Wunused-but-set-variable] ThreadingWin.cpp: In function 'WTF::ThreadIdentifier WTF::createThreadInternal(WTF::ThreadFunction, void*, const char*)': ThreadingWin.cpp:247:25: warning: ignoring return value of 'WTF::OwnPtr<T>::ValueType* WTF::OwnPtr<T>::leakPtr() [with T = WTF::ThreadFunctionInvocation; WTF::OwnPtr<T>::PtrType = WTF::ThreadFunctionInvocation*; WTF::OwnPtr<T>::ValueType = WTF::ThreadFunctionInvocation]', declared with attribute warn_unused_result [-Wunused-result]
Attachments
Patch (5.55 KB, patch)
2012-06-19 11:43 PDT, Kalev Lember
no flags
Kalev Lember
Comment 1 2012-06-19 11:43:44 PDT
Kalev Lember
Comment 2 2012-06-28 11:00:56 PDT
Adding a few people to CC who have reviewed Windows threading patches before. The patch should be just a trivial warning cleanup.
WebKit Review Bot
Comment 3 2012-06-28 12:15:46 PDT
Comment on attachment 148378 [details] Patch Clearing flags on attachment: 148378 Committed r121448: <http://trac.webkit.org/changeset/121448>
WebKit Review Bot
Comment 4 2012-06-28 12:15:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.