ThreadingWin: Silence GCC compiler warnings https://bugs.webkit.org/show_bug.cgi?id=89491

Patch by Kalev Lember <kalevlember@gmail.com> on 2012-06-28
Reviewed by Adam Roben.

* wtf/ThreadingWin.cpp:
(WTF::createThreadInternal):
(WTF::PlatformCondition::timedWait):
(WTF::PlatformCondition::signal): Fix unused-but-set-variable
warnings.

Canonical link: https://commits.webkit.org/108015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121448 268f45cc-cd09-0410-ab3c-d52691b4dbfc